...
                  spreadRadius: 1,
                  offset: Offset(-1, -1),
                ),
              ],
            ),
            child: InkWell(
              key: const ValueKey<String>('capture_fab'),
              onTap: onPressed,
              customBorder: const CircleBorder(),
              child: const Icon(
                Icons.add,
                size: 28,
                color: Colors.white,
...
