...
      includeBottomChromeSpace: false,
      topPadding: 10,
      child: Column(
        mainAxisSize: MainAxisSize.min,
        children: <Widget>[
          SheetTopBar(
            title: 'Cook again',
            closeOnLeft: true,
            onClose: () => Navigator.pop(context),
          ),
          const SizedBox(height: 12),
          Row(
            children: <Widget>[
...
